# Halt.rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HaltProxy.java  README.md  halt.ts
.github/workflows/: ci.yml
.windsurf/: ide-support.json
benches/: performance.rs
bindings/go/: go.mod  halt.go
bindings/python/: setup.py
bindings/python/halt/: __init__.py
bindings/typescript/: package.json
config/: default.env
docker/: Dockerfile
docs/api/: api.md
docs/marketing/: github-hooks.md
examples/java/: HaltExample.java
examples/python/: basic_usage.py
examples/rust/: basic_usage.rs
examples/typescript/: basic_usage.ts
mcp-server/: package.json
mcp-server/src/: index.test.ts  index.ts
src/: main.rs  plugins.rs
src/core/: mod.rs
