[package]
name = "halt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dashmap = "5.5"
priority-queue = "1.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
jni = "0.21"
wasm-bindgen = "0.2"
actix-web = "4.4"
actix-cors = "0.6"
actix-web-actors = "4.2"
rusqlite = { version = "0.29", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
